site/styles/header.css
@media only screen and (min-width: 0px) {
    nav {
        background-color: grey;
        padding: 10px;
        width: calc(100% - 20px);
        position: sticky;
        top: 0;
        text-align: center;

        overflow-x: scroll;
        display: inline-flex;
        white-space: nowrap;
    }

    .nav-link {
        /*width: 180px;*/
        height: 25px;
        background-color: lightblue;
        border: solid 2px black;
        color: black;
        padding: 5px;
        text-align: center;
        text-decoration: none;
        display: inline-block;
        font-size: 20px;
        margin: 5px;
        cursor: pointer;
        transition: background-color 0.2s ease-in;
    }
    
    .nav-link:hover {
        background-color: rgb(0, 140, 255);
    }
}

@media only screen and (min-width: 450px) {
    nav {
        text-align: left;
    }
}

header {
    margin-top: 0;
    width: calc(100% - 20px);
    padding: 10px;
    background-color: lightblue;
    display: flex;
}

header > p {
    margin: 0;
    margin-left: 50px;
    padding-top: 10px;
    font-size: 25px;
    font-weight: bold;
}

.header-picture {
    max-height: 49px;
    width:auto;
}

